# rust-playground

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  deny.toml
scripts/: install.sh  pgrs.sh
